--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -30,12 +30,12 @@
    },
    "outputs": [],
    "source": [
-    "!pip install torchtext"
+    "!pip install torchtext spacy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -44,8 +44,13 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torchtext import data, datasets\n",
+    "import spacy\n",
+    "spacy_de = spacy.load('de')\n",
+    "spacy_en = spacy.load('en')\n",
     "from torch.autograd import Variable\n",
-    "import math"
+    "import math\n",
+    "import copy"
    ]
   },
   {
@@ -88,23 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class EncoderDecoder(nn.Module):\n",
-    "    def __init__(self, encoder, decoder, src_embed, tgt_embed, pad_idx):\n",
+    "    def __init__(self, encoder, decoder, src_embed, tgt_embed, generator, pad_idx):\n",
     "        super(EncoderDecoder, self).__init__()\n",
     "        self.encoder = encoder\n",
     "        self.decoder = decoder\n",
     "        self.src_embed = src_embed\n",
     "        self.tgt_embed = tgt_embed\n",
-    "\n",
+    "        self.generator = generator\n",
+    "        self.pad_idx = pad_idx\n",
+    "        \n",
     "    def forward(self, src, tgt):\n",
-    "        src_mask = (src != pad_idx)\n",
-    "        tgt_mask = (tgt != pad_idx)\n",
+    "        src_mask = (src != self.pad_idx).unsqueeze(-2)\n",
+    "        tgt_mask = (tgt != self.pad_idx).unsqueeze(-1)\n",
     "        memory = self.encoder(self.src_embed(src), src_mask)\n",
     "        output = self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)\n",
     "        return output"
@@ -123,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -131,12 +138,12 @@
    "source": [
     "def clones(module, N):\n",
     "    \"Produces N identical layers.\"\n",
-    "    return nn.ModuleList([module.clone() for _ in range(N)])"
+    "    return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -148,12 +155,11 @@
     "        super(Encoder, self).__init__()\n",
     "        self.layers = clones(layer, N)\n",
     "\n",
-    "    def forward(self, inputs, mask):\n",
+    "    def forward(self, x, mask):\n",
     "        \"Pass the input through each layer in turn.\"\n",
-    "        out = inputs\n",
     "        for layer in self.layers:\n",
-    "            out = layer(out, mask)\n",
-    "        return out"
+    "            x = layer(x, mask)\n",
+    "        return x"
    ]
   },
   {
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -202,12 +208,12 @@
    "source": [
     "class SublayerConnection(nn.Module):\n",
     "    \"A residual connection followed by a layer norm.\"\n",
-    "    def __init__(self, size, dropout, modules):\n",
-    "        super(TransformerSequential, self).__init__()\n",
+    "    def __init__(self, size, dropout):\n",
+    "        super(SublayerConnection, self).__init__()\n",
     "        self.norm = LayerNorm(size)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
-    "    def forward(x, sublayer, mask=None):\n",
+    "    def forward(self, x, sublayer, mask=None):\n",
     "        return self.norm(x + self.dropout(sublayer(x)))"
    ]
   },
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +241,7 @@
    "source": [
     "class EncoderLayer(nn.Module):\n",
     "    \"Encoder is made up of two sublayers, self attn and feed forward.\"\n",
-    "    def __init__(self, size, dropout, self_attn, feed_forward):\n",
+    "    def __init__(self, size, self_attn, feed_forward, dropout):\n",
     "        super(EncoderLayer, self).__init__()\n",
     "        self.self_attn = self_attn\n",
     "        self.feed_forward = feed_forward\n",
@@ -257,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -284,24 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class DecoderLayer(nn.Module):\n",
-    "    def __init__(self, dropout, self_attn, src_attn, feed_forward):\n",
-    "        super(TransformerDecoderLayer, self).__init__()\n",
+    "    def __init__(self, size, self_attn, src_attn, feed_forward, dropout):\n",
+    "        super(DecoderLayer, self).__init__()\n",
     "        self.self_attn = self_attn\n",
     "        self.src_attn = src_attn\n",
     "        self.feed_forward = feed_forward\n",
-    "        self.sublayer = clones(SublayerWrap(size, dropout), 3)\n",
+    "        self.sublayer = clones(SublayerConnection(size, dropout), 3)\n",
     " \n",
     "    def forward(self, x, memory, src_mask, tgt_mask):\n",
     "        m = memory\n",
     "        x = self.sublayer[0](x, lambda x: self.self_attn(x, mask=tgt_mask))\n",
-    "        x = self.sublayer[1](x, lambda x: self.src_attn(m, m, x, src_mask))\n",
+    "        x = self.sublayer[1](x, lambda x: self.src_attn(x, m, m, src_mask))\n",
     "        return self.sublayer[2](x, self.feed_forward)"
    ]
   },
@@ -316,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -359,16 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def attention(self, query, key, value, mask=None, dropout=0.0):\n",
+    "def attention(query, key, value, mask=None, dropout=0.0):\n",
     "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(query.size(-1))\n",
     "    if mask is not None:\n",
-    "        scores = scores.masked_fill(Variable(mask), -1e9)\n",
+    "        scores = scores.masked_fill(mask, -1e9)\n",
     "    attn = F.dropout(F.softmax(scores, dim = -1), p=dropout)\n",
     "    return torch.matmul(attn, value)"
    ]
@@ -420,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -433,9 +439,7 @@
     "        self.d_k = d_model // h\n",
     "        self.h = h\n",
     "        self.p = dropout\n",
-    "        self.linears = clones(nn.Linear(size, size), 4)\n",
-    "        self.attn = DotProductAttention(dropout)\n",
-    "        \n",
+    "        self.linears = clones(nn.Linear(d_model, d_model), 4)        \n",
     "    def forward(self, query, key=None, value=None, mask=None):\n",
     "        if key is None:\n",
     "            key = query\n",
@@ -448,9 +452,9 @@
     "        def unshape(x):\n",
     "            return x.transpose(1, 2).contiguous().view(batches, -1, self.h * self.d_k)\n",
     "        \n",
-    "        key, query, value = [shape(l(x)) \n",
+    "        query, key, value = [shape(l(x)) \n",
     "                             for l, x in zip(self.linears, (query, key, value))]\n",
-    "        x = unshape(self.attn(query, key, value, mask=mask, dropout=self.p))\n",
+    "        x = unshape(attention(query, key, value, mask=mask, dropout=self.p))\n",
     "        return self.linears[-1](x)"
    ]
   },
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -507,23 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Embeddings \n",
     "class Embeddings(nn.Module):\n",
     "    def __init__(self, d_model, vocab):\n",
+    "        super(Embeddings, self).__init__()\n",
     "        self.lut = nn.Embedding(vocab, d_model)\n",
     "        self.d_model = d_model\n",
     "    def forward(self, x):\n",
     "        return self.lut(x) * math.sqrt(self.d_model)\n",
     "\n",
-    "# Softmax\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, d_model, vocab):\n",
+    "        super(Generator, self).__init__()\n",
     "        self.proj = nn.Linear(d_model, vocab)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -547,21 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
-    "    def __init__(self, dropout, d_model, max_len=5000):\n",
+    "    def __init__(self, d_model, dropout, max_len=5000):\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        \n",
     "        # Compute the positional encodings once.\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, dim, 2) *\n",
-    "                             -(math.log(10000.0) / dim))\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2) *\n",
+    "                             -(math.log(10000.0) / d_model))\n",
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
     "        pe = pe.unsqueeze(1)\n",
@@ -590,41 +594,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_model(src_vocab, tgt_vocab, padding_idx, N=6, d_model=512, d_ff=2048, h=8, dropout=0.1):\n",
+    "    attn = MultiHeadedAttention(h, d_model, dropout)\n",
+    "    ff = PositionwiseFeedForward(d_model, d_ff, dropout)\n",
+    "    position = PositionalEncoding(d_model, dropout)\n",
+    "    return EncoderDecoder(\n",
+    "        Encoder(EncoderLayer(d_model, copy.deepcopy(attn), copy.deepcopy(ff), dropout), N),\n",
+    "        Decoder(DecoderLayer(d_model, copy.deepcopy(attn), copy.deepcopy(attn), copy.deepcopy(ff), dropout), N),\n",
+    "        nn.Sequential(Embeddings(d_model, src_vocab), copy.deepcopy(position)),\n",
+    "        nn.Sequential(Embeddings(d_model, tgt_vocab), copy.deepcopy(position)),\n",
+    "        Generator(d_model, tgt_vocab),\n",
+    "        padding_idx\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = make_model(10, 10, 0)\n",
+    "out = model.forward(Variable(torch.ones(10, 20).long()), Variable(torch.ones(10, 30).long()) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.NLLLoss(size_average=False)\n",
+    "def loss_backprop(model, criterion, output, targets, norm):\n",
+    "    out_column = []\n",
+    "    total = 0\n",
+    "    for i in range(out.size(1)):\n",
+    "        out_column.append(Variable(out[:, i].data))\n",
+    "        loss = criterion(model.generator(out_column[-1]), targets) / norm\n",
+    "        total += loss.data\n",
+    "        loss.backward()\n",
+    "    out_column = torch.stack(out_column, dim=1)\n",
+    "    torch.autograd.backward(out, out_column)\n",
+    "    return total"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Training Data and Batching\n",
     "\n",
-    "We trained on the standard WMT 2014 English-German dataset consisting of about 4.5 million sentence pairs.  Sentences were encoded using byte-pair encoding \\citep{DBLP:journals/corr/BritzGLL17}, which has a shared source-target vocabulary of about 37000 tokens. For English-French, we used the significantly larger \n",
-    "WMT 2014 English-French dataset consisting of 36M sentences and split tokens into a 32000 word-piece vocabulary \\citep{wu2016google}.  Sentence pairs were batched together by approximate sequence length.  Each training batch contained a set of sentence pairs containing approximately 25000 source tokens and 25000 target tokens.     "
+    "We trained on the standard WMT 2014 English-German dataset consisting of about 4.5 million sentence pairs.  Sentences were encoded using byte-pair encoding \\citep{DBLP:journals/corr/BritzGLL17}, which has a shared source-target vocabulary of about 37000 tokens. For English-French, we used the significantly larger WMT 2014 English-French dataset consisting of 36M sentences and split tokens into a 32000 word-piece vocabulary \\citep{wu2016google}.  Sentence pairs were batched together by approximate sequence length.  Each training batch contained a set of sentence pairs containing approximately 25000 source tokens and 25000 target tokens.     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-9814d97aa16f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mMAX_LEN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(DE, EN), \n\u001b[0m\u001b[1;32m     22\u001b[0m                                          \u001b[0mfilter_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'src'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mMAX_LEN\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                                          len(vars(x)['trg']) <= MAX_LEN)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DE' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading de-en.tgz\n"
      ]
     }
    ],
    "source": [
     "# Load words from IWSLT\n",
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
-    "\n",
-    "import spacy\n",
-    "spacy_de = spacy.load('de')\n",
-    "spacy_en = spacy.load('en')\n",
-    "\n",
     "def tokenize_de(text):\n",
     "    return [tok.text for tok in spacy_de.tokenizer(text)]\n",
     "\n",
@@ -637,10 +679,10 @@
     "TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, eos_token = EOS_WORD) # only target needs BOS/EOS\n",
     "\n",
     "MAX_LEN = 100\n",
-    "train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(DE, EN), \n",
+    "train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(SRC, TGT), \n",
     "                                         filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
     "                                         len(vars(x)['trg']) <= MAX_LEN)\n",
-    "MIN_FREQ = 5\n",
+    "MIN_FREQ = 2\n",
     "SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
     "TGT.build_vocab(train.trg, min_freq=MIN_FREQ)"
    ]
@@ -723,26 +765,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'LossComputeBase' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-e74add77d1c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mNMTLossCompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLossComputeBase\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \"\"\"\n\u001b[1;32m      7\u001b[0m     \u001b[0mStandard\u001b[0m \u001b[0mNMT\u001b[0m \u001b[0mLoss\u001b[0m \u001b[0mComputation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'LossComputeBase' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class LabelSmoothing(nn.Criterion):\n",
-    "    def __init__(self, generator, tgt_vocab, normalization=\"sents\",\n",
-    "                 label_smoothing=0.0):\n",
-    "        super(LabelSmoothing, self).__init__(generator, tgt_vocab)\n",
+    "class LabelSmoothing(nn.Module):\n",
+    "    def __init__(self, label_smoothing=0.0):\n",
+    "        super(LabelSmoothing, self).__init__()\n",
     "        self.criterion = nn.KLDivLoss(size_average=False)\n",
     "        one_hot = torch.randn(1, len(tgt_vocab))\n",
     "        one_hot.fill_(label_smoothing / (len(tgt_vocab) - 2))\n",
@@ -750,8 +779,7 @@
     "        self.register_buffer('one_hot', one_hot)\n",
     "        self.confidence = 1.0 - label_smoothing\n",
     "\n",
-    "    def forward(self, batch, output, target):\n",
-    "        scores = self.generator(self._bottle(output))\n",
+    "    def forward(self, x, target):\n",
     "        gtruth = target.view(-1)\n",
     "        tdata = gtruth.data\n",
     "        mask = torch.nonzero(tdata.eq(self.padding_idx)).squeeze()\n",
@@ -762,7 +790,7 @@
     "            log_likelihood.index_fill_(0, mask, 0)\n",
     "            tmp_.index_fill_(0, mask, 0)\n",
     "        gtruth = Variable(tmp_, requires_grad=False)\n",
-    "        loss = self.criterion(scores, gtruth)\n",
+    "        loss = self.criterion(x, gtruth)\n",
     "        return loss"
    ]
   }
