--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That is, the output of each sub-layer is $\\mathrm{LayerNorm}(x + \\mathrm{Sublayer}(x))$, where $\\mathrm{Sublayer}(x)$ is the function implemented by the sub-layer itself.  "
+    "That is, the output of each sub-layer is $\\mathrm{LayerNorm}(x + \\mathrm{Sublayer}(x))$, where $\\mathrm{Sublayer}(x)$ is the function implemented by the sub-layer itself.  We apply dropout \\citep{srivastava2014dropout} to the output of each sub-layer, before it is added to the sub-layer input and normalized.   "
    ]
   },
   {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,19 +603,25 @@
     "    attn = MultiHeadedAttention(h, d_model, dropout)\n",
     "    ff = PositionwiseFeedForward(d_model, d_ff, dropout)\n",
     "    position = PositionalEncoding(d_model, dropout)\n",
-    "    return EncoderDecoder(\n",
+    "    model = EncoderDecoder(\n",
     "        Encoder(EncoderLayer(d_model, copy.deepcopy(attn), copy.deepcopy(ff), dropout), N),\n",
     "        Decoder(DecoderLayer(d_model, copy.deepcopy(attn), copy.deepcopy(attn), copy.deepcopy(ff), dropout), N),\n",
     "        nn.Sequential(Embeddings(d_model, src_vocab), copy.deepcopy(position)),\n",
     "        nn.Sequential(Embeddings(d_model, tgt_vocab), copy.deepcopy(position)),\n",
     "        Generator(d_model, tgt_vocab),\n",
     "        padding_idx\n",
-    "    )"
+    "    )\n",
+    "    \n",
+    "    # This is really important.\n",
+    "    for p in model.parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform(p)\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,15 +744,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.NoamOpt at 0x7f05193c4e80>"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Adam Optimizer\n",
-    "def rate(step, model_size, factor, warmup):\n",
-    "    return factor * \\\n",
-    "        (model_size ** (-0.5) *\n",
-    "        min(step ** (-0.5), step * warmup_steps**(-1.5)))"
+    "class NoamOpt:\n",
+    "    def __init__(self, model_size, factor, warmup, optimizer):\n",
+    "        self.optimizer = optimizer\n",
+    "        self.step = 0\n",
+    "        self.warmup = warmup\n",
+    "        self.factor = factor\n",
+    "        self.model_size = model_size\n",
+    "        \n",
+    "    def step(self):\n",
+    "        self.step += 1\n",
+    "        rate = self.rate()\n",
+    "        for p in self.optimizer.param_groups:\n",
+    "            p.set_rate(rate)\n",
+    "        self.optimizer.step()\n",
+    "        \n",
+    "    def rate(self):\n",
+    "        return self.factor * \\\n",
+    "            (self.model_size ** (-0.5) *\n",
+    "            min(self.step ** (-0.5), self.step * self.warmup_steps**(-1.5)))\n",
+    "        \n",
+    "def get_opt(model):\n",
+    "    return NoamOpt(model.src_embed[0].d_model, 2, 8000,\n",
+    "            torch.optim.Adam(model.parameters(), lr=0, betas=(0.9, 0.98), eps=1e-9))\n",
+    "get_opt(model)"
    ]
   },
   {
@@ -755,9 +791,7 @@
    "source": [
     "## Regularization                                                                                                                                                                                                                                                                                                                         \n",
     "We employ three types of regularization during training:                                                                                                                                                                                                                                                                    \n",
-    "### Residual Dropout\n",
-    "\n",
-    " We apply dropout \\citep{srivastava2014dropout} to the output of each sub-layer, before it is added to the sub-layer input and normalized.   In addition, we apply dropout to the sums of the embeddings and the positional encodings in both the encoder and decoder stacks.  For the base model, we use a rate of $P_{drop}=0.1$.                                                                                                                                                                                                                                                                                                                        \n",
+    "                                                                                                                                                                                                                                                                                                                      \n",
     "### Label Smoothing\n",
     "\n",
     "During training, we employed label smoothing of value $\\epsilon_{ls}=0.1$ \\citep{DBLP:journals/corr/SzegedyVISW15}.  This hurts perplexity, as the model learns to be more unsure, but improves accuracy and BLEU score.  "
