--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> By Alexander Rush (@harvardnlp)\n",
+    "> ### By Alexander Rush (@harvardnlp)\n",
+    "\n",
+    "\n",
     "\n",
     "> When I teach machine learning, I often tell students that it is impossible to understand recent papers without getting their hands dirty and jumping in. While ideally math should communicate what exactly is going on, many of the \"details\" turn out to be quite important to getting good results.\n",
     "\n",
@@ -35,22 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torchtext import data, datasets\n",
-    "import spacy\n",
+    "import spacy, math, copy\n",
     "spacy_de = spacy.load('de')\n",
     "spacy_en = spacy.load('en')\n",
-    "from torch.autograd import Variable\n",
-    "import math\n",
-    "import copy"
+    "from torch.autograd import Variable"
    ]
   },
   {
@@ -93,10 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 160,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class EncoderDecoder(nn.Module):\n",
@@ -111,7 +110,7 @@
     "        \n",
     "    def forward(self, src, tgt):\n",
     "        src_mask = (src != self.pad_idx).unsqueeze(-2)\n",
-    "        tgt_mask = (tgt != self.pad_idx).unsqueeze(-1)\n",
+    "        tgt_mask = (tgt != self.pad_idx).unsqueeze(-1) & Variable(subsequent_mask(tgt.size(-1)))\n",
     "        memory = self.encoder(self.src_embed(src), src_mask)\n",
     "        output = self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)\n",
     "        return output"
@@ -506,7 +505,7 @@
    "metadata": {},
    "source": [
     "## Embeddings and Softmax                                                                                                                                                                                                                                                                                           \n",
-    "Similarly to other sequence transduction models, we use learned embeddings to convert the input tokens and output tokens to vectors of dimension $d_{\\text{model}}$.  We also use the usual learned linear transformation and softmax function to convert the decoder output to predicted next-token probabilities.  In our model, we share the same weight matrix between the two embedding layers and the pre-softmax linear transformation, similar to \\citep{press2016using}.   In the embedding layers, we multiply those weights by $\\sqrt{d_{\\text{model}}}$.                                                                                                                                     "
+    "Similarly to other sequence transduction models, we use learned embeddings to convert the input tokens and output tokens to vectors of dimension $d_{\\text{model}}$.  We also use the usual learned linear transformation and softmax function to convert the decoder output to predicted next-token probabilities.  In our model, we share the same weight matrix between the two embedding layers and the pre-softmax linear transformation, similar to \\citep{press2016using}.   In the embedding layers, we multiply those weights by $\\sqrt{d_{\\text{model}}}$. In addition, we apply dropout to the sums of the embeddings and the positional encodings in both the encoder and decoder stacks.  For the base model, we use a rate of $P_{drop}=0.1$.                                                                                                                                 "
    ]
   },
   {
@@ -621,27 +620,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = make_model(10, 10, 0)\n",
-    "out = model.forward(Variable(torch.ones(10, 20).long()), Variable(torch.ones(10, 30).long()) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = nn.NLLLoss(size_average=False)\n",
-    "def loss_backprop(model, criterion, output, targets, norm):\n",
+    "def loss_backprop(model, criterion, out, targets, norm):\n",
     "    out_column = []\n",
     "    total = 0\n",
+    "    assert out.size(1) == targets.size(1)\n",
     "    for i in range(out.size(1)):\n",
     "        out_column.append(Variable(out[:, i].data))\n",
-    "        loss = criterion(model.generator(out_column[-1]), targets) / norm\n",
+    "        gen = model.generator(out_column[-1])\n",
+    "        loss = criterion(gen, targets[:, i]) / norm\n",
     "        total += loss.data\n",
     "        loss.backward()\n",
     "    out_column = torch.stack(out_column, dim=1)\n",
@@ -660,17 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloading de-en.tgz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load words from IWSLT\n",
     "def tokenize_de(text):\n",
@@ -701,9 +684,7 @@
    },
    "outputs": [],
    "source": [
-    "# Specialized batching\n",
-    "\n",
-    "# Batching by tokens. \n",
+    "# Specialized batching. This seems to really matter.\n",
     "global max_src_in_batch, max_tgt_in_batch\n",
     "\n",
     "def batch_size_fn(new, count, sofar):\n",
@@ -744,31 +725,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.NoamOpt at 0x7f05193c4e80>"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class NoamOpt:\n",
     "    def __init__(self, model_size, factor, warmup, optimizer):\n",
     "        self.optimizer = optimizer\n",
-    "        self.step = 0\n",
+    "        self._step = 0\n",
     "        self.warmup = warmup\n",
     "        self.factor = factor\n",
     "        self.model_size = model_size\n",
     "        \n",
     "    def step(self):\n",
-    "        self.step += 1\n",
+    "        self._step += 1\n",
     "        rate = self.rate()\n",
     "        for p in self.optimizer.param_groups:\n",
     "            p.set_rate(rate)\n",
@@ -777,20 +747,18 @@
     "    def rate(self):\n",
     "        return self.factor * \\\n",
     "            (self.model_size ** (-0.5) *\n",
-    "            min(self.step ** (-0.5), self.step * self.warmup_steps**(-1.5)))\n",
+    "            min(self._step ** (-0.5), self.step * self.warmup_steps**(-1.5)))\n",
     "        \n",
     "def get_opt(model):\n",
     "    return NoamOpt(model.src_embed[0].d_model, 2, 8000,\n",
-    "            torch.optim.Adam(model.parameters(), lr=0, betas=(0.9, 0.98), eps=1e-9))\n",
-    "get_opt(model)"
+    "            torch.optim.Adam(model.parameters(), lr=0, betas=(0.9, 0.98), eps=1e-9))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regularization                                                                                                                                                                                                                                                                                                                         \n",
-    "We employ three types of regularization during training:                                                                                                                                                                                                                                                                    \n",
+    "## Regularization                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
     "                                                                                                                                                                                                                                                                                                                      \n",
     "### Label Smoothing\n",
     "\n",
@@ -826,6 +794,63 @@
     "        gtruth = Variable(tmp_, requires_grad=False)\n",
     "        loss = self.criterion(x, gtruth)\n",
     "        return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Putting it all together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.NoamOpt at 0x7f05183ef278>"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "train_iter, val_iter = data.BucketIterator.splits((train, val), batch_size=BATCH_SIZE, device=-1,\n",
+    "                                                  repeat=False, sort_key=lambda x: len(x.src))\n",
+    "pad_idx = TGT.vocab.stoi[\"*pad*\"]\n",
+    "model = make_model(len(SRC.vocab), len(TGT.vocab), pad_idx)\n",
+    "model_opt = get_opt(model)\n",
+    "model_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 17]) torch.Size([32, 17, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in train_iter:\n",
+    "    src, trg = batch.src.transpose(0, 1), batch.trg.transpose(0, 1)\n",
+    "    out = model.forward(src, trg)\n",
+    "    print(trg[:, 1:].size(), out[:, :-1].size() )\n",
+    "    loss = loss_backprop(model, criterion, out[:, :-1], trg[:, 1:], (trg[:, 1:] == pad_idx).data.sum())\n",
+    "    model_opt.step()\n",
+    "    print(loss)\n",
+    "    break\n"
    ]
   }
  ],
